--- a/package.json
+++ b/package.json
@@ -1,29 +1,66 @@
 {
-  "name": "universe",
+  "name": "WriterObjectRegistr",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "swaggerFile": {
+    "version": "1.0.0",
+    "account": "magcenter"
   },
-  "author": "",
-  "license": "ISC",
+  "description": "The purpose of this (microservice) is to manage object reader registry",
+  "main": "./src/index.js",
+  "type": "storage",
+  "scripts": {
+    "lint": "gulp lint",
+    "docs": "gulp docs",
+    "pretest": "node ./local/testSetup.js",
+    "test": "exit 0",
+    "manualtest": "nyc gulp test",
+    "prestart": "node ./local/setup.js",
+    "start": "sh server-start.sh",
+    "commit-ready": "gulp docs; gulp lint; npm run test",
+    "unit": "mocha --recursive './test/src/unit/**/*.js'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "gulp docs; gulp lint",
+      "commit-msg": "node ./local/commitMsgCheck",
+      "pre-push": "npm run commit-ready"
+    }
+  },
+  "Contributors": [
+    {
+      "name": "Kanishk Kumar"
+    },
+    {
+      "name": "Prasanna Mangoli"
+    }
+  ],
+  "keywords": [
+    "swagger",
+    "engine",
+    "objectReaderRegistry"
+  ],
+  "private": true,
   "dependencies": {
-    "@makosmods/minio-helper": "^1.0.0",
-    "@makosmods/logger-helper": "^1.0.0",
-    "@makosmods/utils": "^1.0.0",
-    "aws-sdk": "^2.982.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "http-status": "^1.5.0",
-    "mysql2": "^2.3.2",
-    "nodemon": "^2.0.12",
-    "package.json": "^2.0.1",
-    "sequelize": "^6.7.0",
-    "sequelize-auto": "^0.8.4",
-    "sequelize-cli": "^6.2.0",
-    "stream-slice": "^0.1.2",
-    "util": "^0.12.4"
+    "express": "^4.12.3",
+    "swagger-express-mw": "^0.7.0",
+    "swagger-node-runner": "^0.7.3",
+    "systeminformation": "^5.9.8"
+  },
+  "devDependencies": {
+    "chai": "4.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.20.0",
+    "gulp": "4.0.2",
+    "husky": "4.2.5",
+    "mocha": "7.2.0",
+    "nyc": "15.1.0",
+    "supertest": "4.0.2"
+  },
+  "author": "MAG Center",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/magcentre/object-registry-writer/"
   }
 }
