--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "sh server-start.sh",
     "commit-ready": "gulp docs; gulp lint; npm run test",
     "unit": "mocha --recursive './test/src/unit/**/*.js'"
-  },
+  }, 
   "husky": {
     "hooks": {
       "pre-commit": "gulp docs; gulp lint",
@@ -42,9 +42,13 @@
   "private": true,
   "dependencies": {
     "express": "^4.12.3",
-    "swagger-express-mw": "^0.7.0",
-    "swagger-node-runner": "^0.7.3",
-    "systeminformation": "^5.9.8"
+    "systeminformation": "^5.9.8",
+    "sequelize": "^6.8.0",
+    "@magcenter/minio-helper": "^1.0.0",
+    "@magcentre/init": "^1.0.0",
+    "@magcentre/sequelize-helper": "^1.0.0",
+    "@magcentre/logger-helper": "^1.0.0",
+    "@magcentre/response-helper": "^1.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
