--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
   "dependencies": {
     "express": "^4.12.3",
     "systeminformation": "^5.9.8",
-    "sequelize": "^6.8.0",
-    "@magcenter/minio-helper": "^1.0.0",
-    "@magcentre/init": "^1.0.0",
+    "@magcentre/minio-helper": "^1.0.0",
+    "@magcentre/init": "^1.0.1",
     "@magcentre/sequelize-helper": "^1.0.0",
     "@magcentre/logger-helper": "^1.0.0",
-    "@magcentre/response-helper": "^1.0.0"
+    "@magcentre/response-helper": "^1.0.0",
+    "@magcentre/api-utils": "^1.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
