docker build fix

--- a/.github/workflows/staging-deployment.yaml
+++ b/.github/workflows/staging-deployment.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: "185.213.175.212"
-          username: "prasanna"
+          username: "root"
           password: "PrasannaM@1122"
           port: 22
           source: "*"
@@ -33,7 +33,7 @@ jobs:
         name: npm install and start service
         with:
           host: "185.213.175.212"
-          username: "prasanna"
+          username: "root"
           password: "PrasannaM@1122"
           port: 22
           script: |
@@ -41,5 +41,5 @@ jobs:
             pwd
             sudo /usr/bin/docker stop object-writer
             sudo /usr/bin/docker rm object-writer
-            sudo /usr/bin/docker build 0t magcentre/object-writer
+            sudo /usr/bin/docker build -t magcentre/object-writer .
             sudo /usr/bin/docker run --network=magcentre-network --name=object-writer -d magcentre/object-writer
