rmi image before build

--- a/.github/workflows/staging-deployment.yaml
+++ b/.github/workflows/staging-deployment.yaml
@@ -41,5 +41,6 @@ jobs:
             pwd
             sudo /usr/bin/docker stop object-writer
             sudo /usr/bin/docker rm object-writer
+            sudo /usr/bin/docker rmi magcentre/object-writer .
             sudo /usr/bin/docker build -t magcentre/object-writer .
             sudo /usr/bin/docker run --network=magcentre-network --name=object-writer -d magcentre/object-writer
