--- a/src/configuration/default.yaml
+++ b/src/configuration/default.yaml
@@ -2,32 +2,34 @@
 
 # values in the swagger hash are system configuration for swagger-node
 swagger:
-
-  fittingsDirs: [ fittings ]
+  fittingsDirs: [fittings]
   defaultPipe: null
-  swaggerControllerPipe: swagger_controllers  # defines the standard processing pipe for controllers
+  swaggerControllerPipe: swagger_controllers # defines the standard processing pipe for controllers
 
   # values defined in the bagpipes key are the bagpipes pipes and fittings definitions
   # (see https://github.com/apigee-127/bagpipes)
   bagpipes:
-
     _router:
       name: swagger_router
       mockMode: false
-      mockControllersDirs: [ mocks ]
-      controllersDirs: [ controllers ]
+      mockControllersDirs: [mocks]
+      controllersDirs: [controllers]
 
     _swagger_validate:
       name: swagger_validator
       validateResponse: true
-    
+
     swagger_params_parser:
       name: swagger_params_parser
       multerOptions:
         inMemory: false
-        dest: 'uploads'
+        dest: "uploads"
       jsonOptions:
-        limit: '50mb'
+        limit: "50mb"
+
+    _swagger_security:
+      name: swagger_security
+      securityHandlersModule: middlewares/auth.mw
 
     # pipe for all swagger-node controllers
     swagger_controllers:
@@ -42,5 +44,4 @@ swagger:
     # pipe to serve swagger (endpoint is in swagger.yaml)
     swagger_raw:
       name: swagger_raw
-
 # any other values in this file are just loaded into the config for application access...
