--- a/.github/workflows/staging-deployment.yaml
+++ b/.github/workflows/staging-deployment.yaml
@@ -43,4 +43,5 @@ jobs:
             sudo /usr/bin/docker rm object-writer
             sudo /usr/bin/docker rmi magcentre/object-writer .
             sudo /usr/local/bin/docker-compose down
+            sudo /usr/bin/docker rmi object-writer_service
             sudo /usr/local/bin/docker-compose up -d
