--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,34 @@ version: '3'
 
 services:
 
-  registry-db:
+ registry-db:
     container_name: object-registry-writer-db
-    image: mysql:5.7
+    image: mongo
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=magcentre
-      - MYSQL_DATABASE=object-registry
+      - MONGO_INITDB_DATABASE=magcentre
     networks:
       - cloud-network
     volumes:
-      - /home/prasanna/container-stroage/object-registry-writer:/var/lib/mysql
+      - /home/prasanna/container-stroage/object-registry-writer:/data/db
+
+  mongo-express:
+    container_name: object-registry-writer-db-ui
+    image: mongo-express
+    stdin_open: true
+    tty: true
+    restart: unless-stopped
+    environment:
+        - ME_CONFIG_MONGODB_SERVER=object-registry-writer-db
+        - ME_CONFIG_MONGODB_PORT=27017
+        - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+    depends_on:
+        - registry-db
+    ports:
+      - 8082:8081
+    networks:
+      - cloud-network
+
 
   service:
     container_name: object-registry-writer-service
