--- a/.github/workflows/staging-deployment.yaml
+++ b/.github/workflows/staging-deployment.yaml
@@ -6,7 +6,7 @@ name: Deployment
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ 'master' ]
+    branches: ["master"]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -15,7 +15,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
@@ -39,6 +39,9 @@ jobs:
           script: |
             cd /home/prasanna/deplyement/object-writer
             pwd
+            sudo /usr/bin/docker stop object-writer
+            sudo /usr/bin/docker rm object-writer
+            sudo /usr/bin/docker rmi magcentre/object-writer .
             sudo /usr/local/bin/docker-compose down
             sudo /usr/bin/docker rmi object-writer_service
             sudo /usr/local/bin/docker-compose up -d
